--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reddit-tv-companion",
   "author": "Adeel Khan",
+  "homepage": "http://adeelk93.github.io/RedditTVCompanion/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,10 +12,13 @@
     "semantic-ui-react": "^0.67.0"
   },
   "devDependencies": {
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
