Upgraded imdb-api

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "author": "Adeel Khan",
   "homepage": "https://adeelk93.github.io/Reddit-TV-Companion/",
   "version": "0.1.0",
-  "private": true,
+  "license" : "ISC",
+  "repository": "https://github.com/AdeelK93/Reddit-TV-Companion",
   "dependencies": {
-    "imdb-api": "^2.2.1",
+    "imdb-api": "^2.2.2",
     "react": "15.4.2",
     "react-dom": "15.4.2",
     "react-router-component": "^0.36.5",
@@ -13,7 +14,7 @@
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
-    "react-scripts": "0.9.4"
+    "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
