--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "author": "Adeel Khan",
   "homepage": "https://adeelk93.github.io/Reddit-TV-Companion/",
   "version": "0.1.0",
-  "license" : "ISC",
+  "license": "ISC",
   "repository": "https://github.com/AdeelK93/Reddit-TV-Companion",
   "dependencies": {
-    "imdb-api": "^2.2.2",
-    "react": "15.5.3",
-    "react-dom": "15.5.3",
-    "react-router-component": "^0.36.5",
-    "semantic-ui-react": "^0.67.0"
+    "imdb-api": "^3.1.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-component": "^0.37.0",
+    "semantic-ui-react": "^0.71.0"
   },
   "devDependencies": {
-    "gh-pages": "^0.12.0",
-    "react-scripts": "0.9.5"
+    "gh-pages": "^1.0.0",
+    "react-scripts": "1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
