--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "license": "ISC",
   "repository": "https://github.com/AdeelK93/Reddit-TV-Companion",
   "dependencies": {
-    "imdb-api": "^3.1.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-router-component": "^0.37.0",
-    "semantic-ui-react": "^0.71.0"
+    "imdb-api": "^4.0.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-router-component": "^0.39.1",
+    "semantic-ui-react": "^0.82.3"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0",
-    "react-scripts": "1.0.10"
+    "gh-pages": "^1.2.0",
+    "react-scripts": "^1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
